# Productive-GET-MCP

./: .gitignore  LICENSE  README.md  config.py  filter_utils.py  productive_client.py  pyproject.toml  requirements.txt  server.py  tools.py  utils.py  yaml_utils.py
productive_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
